# shelltyper

./: Cargo.toml  README.md
src/: dict.rs  main.rs
